--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -25,11 +25,14 @@
    // transform: translate(-50%, -50%);
    // -webkit-transform: translate(-50%, -50%);
  }
- /*
- .user_nameinfo {
-   margin-left: 20px;
- }
- */
+ .user_image_header{
+  overflow: hidden;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 0 auto;
+  display: inline-block;
+}
  
 .follow_list > div {
   display: inline-flex;
