headerレイアウト修正

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -10,7 +10,7 @@ header
     #navbarcontent.collapse.navbar-collapse
       ul.navbar-nav.ml-auto
         - if logged_in?
-          li.nav-item.ml-3.ml-xl-3.my-lg-0.my-1
+          li.nav-item.ml-3.ml-xl-3.my-lg-0.my-1.mt-lg-0.mt-4
             .nav__item-wrap
               = link_to "タイムライン",   '/' ,class: "nav-link #{active?("static_pages", "home")} "
           li.nav-item.ml-3.ml-xl-3.my-lg-0.my-1
