--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -21,8 +21,8 @@
           = f.label :prof , 'プロフィール'
           = f.text_area :prof, class: 'form-control' 
         .form-group
-          = f.label :picture , 'プロフィール写真'
-          = f.file_field :picture, class: 'form-control'
+          = f.label :avatar , 'プロフィール写真'
+          = f.file_field :avatar, class: 'form-control'
         .form-group
           = f.label :password , 'パスワード'
           = f.password_field :password, class: 'form-control' , placeholder: "6〜10文字以内"
